force-app/main/default/objects/Reimbursement_Table__c/Reimbursement_Table__c.object-meta.xml
<CustomObject>
    <label>Reimbursement Table</label>
    <nameField>
        <displayFormat>RE-{0}</displayFormat>
        <label>Reimbursement Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursement Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>