force-app/main/default/objects/Reimbursement_Table__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>