force-app/main/default/objects/Reimbursement_Table__c/fields/Amount_Requested_for_This_Output__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested_for_This_Output__c</fullName>
    <label>Amount Requested for This Output</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>