force-app/main/default/objects/Reimbursement_Table__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Reimbursement Tables</relationshipLabel>
    <relationshipName>Reimbursement_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>