force-app/main/default/objects/Reimbursement_Table__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>This is the category selected if Per Unit</inlineHelpText>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>