force-app/main/default/objects/Reimbursement_Table__c/fields/Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Category_Description__c</fullName>
    <inlineHelpText>This is the description of the category when per unit is selected.</inlineHelpText>
    <label>Category Description</label>
    <type>TextArea</type>
</CustomField>