force-app/main/default/objects/Reimbursement_Table__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Reimbursement Tables</relationshipLabel>
    <relationshipName>Reimbursement_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>