force-app/main/default/objects/Reimbursement_Table__c/fields/Method_of_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Reimbursement__c</fullName>
    <label>Method of Reimbursement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Unit</fullName>
            </value>
            <value>
                <fullName>Actual Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>