force-app/main/default/objects/Reimbursement_Table__c/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Output</label>
    <referenceTo>Output__c</referenceTo>
    <relationshipLabel>Reimbursement Tables</relationshipLabel>
    <relationshipName>Reimbursement_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>