force-app/main/default/objects/Reimbursement_Table__c/fields/Total_Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Units__c</fullName>
    <label>Total Number of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>