force-app/main/default/objects/Reimbursement_Table__c/fields/Unit_of_Service_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Service_Cost__c</fullName>
    <formula>Amount_Requested_for_This_Output__c /  Total_Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of Service Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>