force-app/main/default/objects/Reimbursement_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Contract__c</columns>
    <columns>Account__c</columns>
    <columns>Method_of_Reimbursement__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>