force-app/main/default/objects/Reimbursement_Table__c/listViews/All_Reimbursements_w_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Reimbursements_w_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Contract__c</columns>
    <columns>Account__c</columns>
    <columns>Method_of_Reimbursement__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Reimbursements w/ Contracts</label>
</ListView>